# arc-agi-benchmarking

./: .env.example  .gitignore  .gitmodules  14754a24.json  93b4f4b3.json  94414823.json  LICENSE.md  README.md  baf41dbf.json  dc2e9a9d.json  e57337a4.json  f0afb749.json  f83cb3f6.json  main.py  prompt_example_o3.md  prompt_example_v2.md  provider_config.yml  pyproject.toml  pytest.ini  requirements.txt  run_evaluation_tasks.sh  run_training_tasks.sh  test_providers.sh  visualize_all.py
.github/workflows/: python-tests.yml
arc_agi_testing/: models.yml
arc_agi_testing/adapters/: anthropic.py  deepseek.py  fireworks.py  gemini.py  grok.py  hugging_face_fireworks.py  open_ai.py  openai_base.py  provider.py
arc_agi_testing/prompts/: prompt_manager.py
arc_agi_testing/scoring/: __init__.py
arc_agi_testing/tests/: test_e2e_providers.py  test_openai_providers.py  test_parsing.py  test_scoring.py
arc_agi_testing/utils/: __init__.py  generate_tasks_list.py  parsing.py  task_utils.py
cli/: main.py  run_all.py  run_all_training.sh  run_evaluation_tasks.sh  run_task.sh  run_training_tasks.sh  submission_cli.py  test_providers.sh
data/task_lists/: public_evaluation_v1.txt  public_training_v1.txt  public_training_v2.txt
results/claude-3-5-haiku-20241022/: results.json
results/claude-3-haiku-20240307/: results.json
results/claude_sonnet_20241022/: results.json
results/deepseek-r1_20250120/: results.json
results/deepseek-v3/: results.json
results/open_ai_o1_high_20241217/: results.json
results/open_ai_o1_low_20241217/: results.json
results/open_ai_o1_med_20241217/: results.json
results/open_ai_o1_mini_20241217/: results.json
results/open_ai_o1_preview_20241217/: results.json
results/open_ai_o3_high_20241220/: attempts.json  results.json
results/open_ai_o3_low_20241220/: attempts.json  results.json
src/: errors.py  models.py  models.yml  parsing.py  schemas.py
src/adapters/: __init__.py  anthropic.py  deepseek.py  fireworks.py  gemini.py  grok.py  hugging_face_fireworks.py  open_ai.py  openai_base.py  provider.py
src/arc_agi_benchmarking/: models.yml  schemas.py
src/prompts/: prompt_manager.py  system_prompt.txt
src/pydantic/: __init__.py
src/scoring/: scoring.py
src/tests/: test_e2e_providers.py  test_logging.py  test_main_parsing.py  test_metrics.py  test_openai_providers.py  test_parsing.py  test_rate_limiter.py  test_run_all_retries.py  test_scoring.py
src/utils/: __init__.py  metrics.py  parsing.py  rate_limiter.py  submission_exists.py  task_utils.py
src/yaml/: __init__.py
submissions/claude-3-5-haiku-20241022/: 009d5c81.json  00dbd492.json  03560426.json  05a7bcf2.json  0607ce86.json  0692e18c.json  070dd51e.json  08573cc6.json  0934a4d8.json  09c534e7.json  0a1d4ef5.json  0a2355a6.json  0b17323b.json  0bb8deee.json  0becf7df.json  0c786b71.json  0c9aba6e.json  0d87d2a6.json  0e671a1a.json  0f63c0b9.json  103eff5b.json  11e1fe23.json  12422b43.json  12997ef3.json  136b0064.json  13713586.json  137f0df0.json  140c817e.json  14754a24.json  15113be4.json  15663ba9.json  16b78196.json  17b80ad2.json  17cae0c1.json  18419cfa.json  184a9768.json  195ba7dc.json  1990f7a8.json  1a6449f1.json  1c02dbbe.json  (+336 more)
submissions/claude-3-haiku-20240307/: 009d5c81.json  00dbd492.json  03560426.json  05a7bcf2.json  0607ce86.json  0692e18c.json  070dd51e.json  08573cc6.json  0934a4d8.json  09c534e7.json  0a1d4ef5.json  0a2355a6.json  0b17323b.json  (+355 more)
(+2842 files in other folders)
